Closed Bug 1602026 Opened 4 years ago Closed 4 years ago

ThreadSanitizer: data race [@ ResolvedByTRR] vs. [@ ResolvedByTRR] on mResolvedByTRR

Categories

(Core :: Networking: HTTP, defect, P2)

x86_64
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla73
Tracking Status
firefox73 --- fixed

People

(Reporter: decoder, Assigned: kershaw)

References

(Blocks 1 open bug)

Details

(Whiteboard: [necko-triaged])

Attachments

(2 files)

The attached crash information was detected while running CI tests with ThreadSanitizer on mozilla-central revision 6989fcd6bab3.

This race is frequent on tests, but also shows up during fuzzing using the gtest targets for Necko (and in fact, this is the only race that frequently occurs in fuzzing using the Necko HTTP targets, so fixing this would be nice for TSan fuzzing on Necko).

General information about TSan reports

Why fix races?

Data races are undefined behavior and can cause crashes as well as correctness issues. Compiler optimizations can cause racy code to have unpredictable and hard-to-reproduce behavior.

Rating

If you think this race can cause crashes or correctness issues, it would be great to rate the bug appropriately as P1/P2 and/or indicating this in the bug. This makes it a lot easier for us to assess the actual impact that these reports make and if they are helpful to you.

False Positives / Benign Races

Typically, races reported by TSan are not false positives [1], but it is possible that the race is benign. Even in this case it would be nice to come up with a fix if it is easily doable and does not regress performance. Every race that we cannot fix will have to remain on the suppression list and slows down the overall TSan performance. Also note that seemingly benign races can possibly be harmful (also depending on the compiler, optimizations and the architecture) [2][3].

[1] One major exception is the involvement of uninstrumented code from third-party libraries.
[2] http://software.intel.com/en-us/blogs/2013/01/06/benign-data-races-what-could-possibly-go-wrong
[3] How to miscompile programs with "benign" data races: https://www.usenix.org/legacy/events/hotpar11/tech/final_files/Boehm.pdf

Suppressing unfixable races

If the bug cannot be fixed, then a runtime suppression needs to be added in mozglue/build/TsanOptions.cpp. The suppressions match on the full stack, so it should be picked such that it is unique to this particular race. The bug number of this bug should also be included so we have some documentation on why this suppression was added.

Looks like we have add a lock in nsHttpTransaction::ResolvedByTRR.

Assignee: nobody → kershaw
Priority: -- → P2
Whiteboard: [necko-triaged]
Attachment #9115410 - Attachment description: Bug 1602026 - Get resolvedByTRR value with a lock → Bug 1602026 - Get resolvedByTRR value within a lock
Pushed by kjang@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/a87127a6cc8c
Get resolvedByTRR value within a lock r=valentin
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla73
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: