Bug 1602026 - Get resolvedByTRR value within a lock r=valentin

Differential Revision: https://phabricator.services.mozilla.com/D56880